maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:12: error: not found: value estfaceMur
    if (estfaceMur) {
        ^